ISSUE #1737 - Fixed static pages showing and going blank a second after, fixed printing of legal pages being cut off

--- a/frontend/components/home/css/home.css
+++ b/frontend/components/home/css/home.css
@@ -3,10 +3,13 @@
 	html, body, home, .homeContainer,
 	#homeLegalContainer, #legal, #legalText,
 	#terms, #privacy, #cookies {
-		overflow: visible !important;
-		height: 100% !important;
+		overflow: inherit !important;
+		height: inherit !important;
 	}
 
+	#legalLinks {
+		display: none;
+	}
 }
 
 #terms, #privacy, #cookies {
